:Fix webpack html loader

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Three.js Images</title>
   </head>
+
   <body>
-    <div id="container"></div>
+    <div id="container">
+      <img src="./assets/images/ocean.jpg" />
+    </div>
   </body>
 </html>
